manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "hw5azkbclr-aa75"
    labels:
        app: "hw5azkbclr-aa75"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "hw5azkbclr-aa75"
